# plantao-ai

./: README.md  pyproject.toml
app/: main.py
app/ai/: schemas.py
app/ai/skills/decision/: prompt.py  skill.py
app/ai/skills/offer_extraction/: prompt.py  skill.py
app/ai/skills/schedule_check/: skill.py
app/ai/tools/: schedule_tool.py  whatsapp_tool.py
app/ai/workflows/: shift_offer_workflow.py
app/api/controllers/: message_controller.py  schedule_controller.py
app/common/: config.py  tracing.py
app/db/: models.py  session.py
